--- a/templates/test_results_template.html
+++ b/templates/test_results_template.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Congressional HTTPS Survey</title>
-    <link rel="stylesheet" href="sunlight.css">
+    <style>{% include "sunlight.css" %}</style>
 </head>
 <body>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
